# EduAgent

./: .gitignore  pyproject.toml
practice/: demo01_asycn_practice.py  demo02_pydantic_practice.py  demo03_Langchain.py  demo04_Langgrapph.py  demo05_FastAPI.py
