[project]
name = "eduagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "debugpy>=1.8.21",
    "duckduckgo-search==8.1.1",
    "environs>=9.5.0",
    "fastapi==0.117.1",
    "flagembedding<1.4",
    "httpx==0.28.1",
    "langchain==1.2.10",
    "langchain-core==1.2.16",
    "langchain-openai==1.1.10",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.9",
    "langgraph-checkpoint-postgres==2.0.8",
    "langgraph-prebuilt==1.0.8",
    "marshmallow<4.0.0",
    "mcp==1.26.0",
    "numpy==1.26.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.11.4",
    "pydantic-settings==2.11.0",
    "pymilvus==2.4.9",
    "pymupdf==1.24.14",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "sentence-transformers==3.3.1",
    "sentencepiece==0.2.1",
    "setuptools<=70.3.0",
    "sqlalchemy[asyncio]==2.0.36",
    "sse-starlette==2.1.3",
    "torch==2.2.2",
    "transformers==4.51.0",
    "uvicorn[standard]==0.32.1",
]

[tool.setuptools] 
packages = ["backend"]
